# booth-plus

./: .dockerignore  .gitattributes  .gitignore  README.md  _gitignore  compose.yaml  package.json
.github/: CODEOWNERS
.github/scripts/: cleanup-ghcr.cjs
.github/workflows/: bun.yml  cleanup-backend-images.yml  deploy-backend.yml
apps/admin/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.js
apps/backend/: .dev.vars.example  .env.example  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  vitest.worker.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_anonymous_comments.py  0003_remove_adult.py  0004_multiple_comments.py  0005_comment_moderation.py  0006_anonymous_credentials.py
apps/backend/migrations/: 0001_initial.sql
apps/backend/scripts/: migrate.py  migrate.ts
apps/backend/src/: app.ts  config.ts  cors.ts  database.ts  index.ts  server.ts
apps/backend/src/booth_plus/: __init__.py  admin.py  app.py  auth.py  booth.py  config.py  database.py  models.py  rate_limit.py  routes.py
apps/backend/test/: app.test.ts  apply-migrations.ts  config.test.ts  database.integration.test.ts  worker.test.ts
apps/backend/tests/: test_admin.py  test_app.py  test_auth.py  test_booth.py  test_comment_authorization.py  test_config.py  test_database.py  test_models.py
apps/extension/: package.json  wxt.config.ts
deploy/oci/: .env.example  Caddyfile  (+4 more)
(+30 files in other folders)
