[project]
name = "booth-plus-backend"
version = "0.1.0"
description = "BoothPlus FastAPI backend"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.16.4",
  "fastapi==0.116.1",
  "psycopg[binary]==3.2.9",
  "sqlalchemy[asyncio]==2.0.43",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["booth_plus"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booth_plus"]
